--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-toastify": "^5.5.0",
